force-app/main/default/objects/Master_Data_Detail__c.object
<CustomObject>
    <fields>
        <fullName>Group__c</fullName>
        <label>Group</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Guideline__c</fullName>
        <label>Guideline</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Icon__c</fullName>
        <label>Icon</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Master_Data__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Master Data</label>
        <referenceTo>Master_Data__c</referenceTo>
        <relationshipLabel>Master Data Detail</relationshipLabel>
        <relationshipName>Master_Data_Detail</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SME__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>SME</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Selected user is not SME user. Please select SME user.</errorMessage>
            <filterItems>
                <field>User.Profile.Name</field>
                <operation>notEqual</operation>
                <value>PM</value>
            </filterItems>
            <infoMessage>Please select SME user.</infoMessage>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>Master_Data_Detail</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Work_Process_Group__c</fullName>
        <label>Work Process Group</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Group</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Work_Process_No__c</fullName>
        <label>Work Process No</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Master Data Detail</label>
    <nameField>
        <label>Work Process Name</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Check_Require_Validation</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
ISBLANK(Work_Process_No__c),
ISBLANK( Group__c ),
ISBLANK(TEXT(Work_Process_Group__c)))</errorConditionFormula>
        <errorMessage>Please fill in &apos;Work Process No&apos; , &apos;Group&apos; and &apos;Work Process Group&apos; .</errorMessage>
    </validationRules>
</CustomObject>